--- a/interfaces/pagina_login.html
+++ b/interfaces/pagina_login.html
@@ -19,6 +19,7 @@
             <br>
             <input type="text" name="contraseña" id="contraseña">
             <button name="registrarme" id="registrarme">Registrarme</button>
+            <label>Prueba</label>
         </div>
     </div>
 </body>
