aumento en la sesion

--- a/interfaces/Interfaz de inicio/Inicio.html
+++ b/interfaces/Interfaz de inicio/Inicio.html
@@ -5,18 +5,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="rectangulo">
-    <button class="I">Inicio</button>
-    <button class="M">Menu</button>
-    <button class="S">Servicios</button>
-    <button class="C">Contacto</button>
-    <button class="AD">Acerca de</button>
-    <button class="IS">Iniciar sesion</button>
+    <div class="rectangulo_1">
+        <button class="I">Inicio</button>
+        <button class="M">Menu</button>
+        <button class="S">Servicios</button>
+        <button class="C">Contacto</button>
+        <button class="AD">Acerca de</button>
+        <button class="IS">Iniciar sesion</button>
     </div>
-
-    <img class="restaurante" src="restaurante3.jpg">
-    <img class="bandeja" src="bandeja-paisa-colombiana.jpg">
-    <img class="ajiaco" src="ajiaco-1458.jpg">
+    </div>
+    
+    <div>
+        <img class="restaurante" src="restaurante3.jpg">
+        <img class="bandeja" src="bandeja-paisa-colombiana.jpg">
+        <img class="ajiaco" src="ajiaco-1458.jpg">
+    </div>
 
     <p class="Srv">
         SERVICIOS<br/>
