--- a/interfaces/pagina_login.html
+++ b/interfaces/pagina_login.html
@@ -8,18 +8,26 @@
     <link rel="stylesheet" href="css/estilos_log.css">
 </head>
 <body>
-    <div></div>
-    <div class="content" id="fondo_sesion">
-        <div class="content" id="iniciar_sesion">
-            <h2>Inicio de sesión</h2>
-            <hr>
-            <input type="text" name="nombre_user" id="nombre_user">
-            <button name="iniciar" id="iniciar">Iniciar</button>
-            <br>
-            <br>
-            <input type="text" name="contraseña" id="contraseña">
-            <button name="registrarme" id="registrarme">Registrarme</button>
-            <label>Prueba</label>
+    <div class="div_principal" id="div_principal">
+        <div id="botones_menu" class="botones_menu">
+            <button class="btn">Inicio</button>
+            <button class="btn">Menu</button>
+            <button class="btn">Servicios</button>
+            <button class="btn">Contacto</button>
+            <button class="btn">Acerca de</button>
+            <button class="btn">Iniciar sesion</button>
+        </div>
+        <div id="fondo_sesion" class="fondo_sesion">
+            <div class="iniciar_sesion" id="iniciar_sesion">
+                <h2>Inicio de sesión</h2>
+                <hr>
+                <input type="text" name="nombre_user" id="nombre_user">
+                <button name="iniciar" id="iniciar">Iniciar</button>
+                <br>
+                <br>
+                <input type="text" name="contraseña" id="contraseña">
+                <button name="registrarme" id="registrarme">Registrarme</button>
+            </div>
         </div>
     </div>
 </body>
