--- a/interfaces/pagina_login.html
+++ b/interfaces/pagina_login.html
@@ -13,6 +13,7 @@
             <button class="btn">Inicio</button>
             <button class="btn">Menu</button>
             <button class="btn">Servicios</button>
+            <label> aqui va el logo</label>
             <button class="btn">Contacto</button>
             <button class="btn">Acerca de</button>
             <button class="btn">Iniciar sesion</button>
@@ -21,12 +22,12 @@
             <div class="iniciar_sesion" id="iniciar_sesion">
                 <h2>Inicio de sesión</h2>
                 <hr>
-                <input type="text" name="nombre_user" id="nombre_user">
-                <button name="iniciar" id="iniciar">Iniciar</button>
+                <input type="text" name="nombre_user" class="txt_nombre" id="nombre_user">
+                <button name="iniciar" class="btn_login">Iniciar</button>
                 <br>
                 <br>
-                <input type="text" name="contraseña" id="contraseña">
-                <button name="registrarme" id="registrarme">Registrarme</button>
+                <input type="text" name="contraseña" class="txt_contra" id="contraseña">
+                <button name="registrarme" class="btn_login">Registrarme</button>
             </div>
         </div>
     </div>
