--- a/interfaces/pagina_login.html
+++ b/interfaces/pagina_login.html
@@ -22,11 +22,11 @@
             <div class="iniciar_sesion" id="iniciar_sesion">
                 <h2>Inicio de sesión</h2>
                 <hr>
-                <input type="text" name="nombre_user" class="txt_nombre" id="nombre_user">
+                <input type="text" name="nombre_user" class="txt_nombre" id="nombre_user" placeholder="Nombre de usuario">
                 <button name="iniciar" class="btn_login">Iniciar</button>
                 <br>
                 <br>
-                <input type="text" name="contraseña" class="txt_contra" id="contraseña">
+                <input type="password" name="contraseña" class="txt_contra" id="contraseña" placeholder="Contraseña">
                 <button name="registrarme" class="btn_login">Registrarme</button>
             </div>
         </div>
