--- a/interfaces/pagina_login.html
+++ b/interfaces/pagina_login.html
@@ -23,11 +23,11 @@
                 <h2>Inicio de sesión</h2>
                 <hr>
                 <input type="text" name="nombre_user" class="txt_nombre" id="nombre_user" placeholder="Nombre de usuario">
-                <button name="iniciar" class="btn_login">Iniciar</button>
+                <button name="iniciar" class="btn_login"><a href="inicio_sesion.php">Iniciar</a></button>
                 <br>
                 <br>
                 <input type="password" name="contraseña" class="txt_contra" id="contraseña" placeholder="Contraseña">
-                <button name="registrarme" class="btn_login">Registrarme</button>
+                <button name="registrarme" class="btn_login"><a href="registrarme.html">Registrarme</a></button>
             </div>
         </div>
     </div>
