enlaces y orden de los archivos

--- a/interfaces/registrarme.html
+++ b/interfaces/registrarme.html
@@ -10,13 +10,13 @@
 <body>
     <div class="div_principal" id="div_principal">
         <div id="botones_menu" class="botones_menu">
-            <button class="btn">Inicio</button>
-            <button class="btn">Menu</button>
-            <button class="btn">Servicios</button>
-            <label> aqui va el logo</label>
-            <button class="btn">Contacto</button>
-            <button class="btn">Acerca de</button>
-            <button class="btn">Iniciar sesion</button>
+            <button><a href="index.html">Inicio</a></button>
+            <button><a href="#">Menú</a></button>
+            <button><a href="servicios.html">Servicios</a></button>
+            <label>----aqui va el logo----</label>
+            <button><a href="contacto.html">Contacto</a></button>
+            <button><a href="#">Acerca de</a></button>
+            <button><a href="pagina_login.html">Iniciar sesion</a></button>
         </div>
         <div id="fondo_sesion" class="fondo_sesion">
             <div class="div_registrar" id="div_registrar">
