--- a/interfaces/servicios.html
+++ b/interfaces/servicios.html
@@ -12,13 +12,13 @@
 <body>
     <div class="div_principal" id="div_principal">
         <div id="botones_menu" class="botones_menu">
-            <button class="btn">Inicio</button>
-            <button class="btn">Menu</button>
-            <button class="btn">Servicios</button>
-            <label> aqui va el logo</label>
-            <button class="btn">Contacto</button>
-            <button class="btn">Acerca de</button>
-            <button class="btn">Iniciar sesion</button>
+            <button><a href="index.html">Inicio</a></button>
+            <button><a href="#">Menú</a></button>
+            <button><a href="servicios.html">Servicios</a></button>
+            <label>----aqui va el logo----</label>
+            <button><a href="contacto.html">Contacto</a></button>
+            <button><a href="#">Acerca de</a></button>
+            <button><a href="pagina_login.html">Iniciar sesion</a></button>
         </div>
         
         <p class="ORDEN">
