--- a/interfaces/registrarme.html
+++ b/interfaces/registrarme.html
@@ -25,25 +25,25 @@
                 <div class="content">
                     <div class="div_datos">
                         <label>* Nombre de usuario:</label>
-                        <input type="text" name="nombre_user" class="txt_nombre" id="nombre_user" placeholder="Nombre de usuario">
+                        <input type="text" name="nombre_user" id="nombre_user" placeholder="Nombre de usuario">
                         <br>
                         <label>* Contraseña:</label>
-                        <input type="password" name="contraseña" class="txt_contra" id="contraseña" placeholder="Contraseña">
+                        <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña">
                         <br>
                         <label>* Confirmar contraseña:</label>
-                        <input type="password" name="contraseña" class="txt_contra" id="contraseña" placeholder="Contraseña">
+                        <input type="password" name="confir_contraseña" id="confir_contraseña" placeholder="Contraseña">
                         <br>
                         <label>* Correo electrónico:</label>
-                        <input type="text" name="nombre_user" class="txt_nombre" id="nombre_user" placeholder="Correo">
+                        <input type="text" name="nombre_user" id="nombre_user" placeholder="Correo">
                         <br>
                         <label>* Número de teléfono:</label>
                     </div>
                     <div class="div_datos1">
                         <label>Código de mesero</label>
-                        <input type="text" name="cod_mes" class="txt_reg" id="cod_mes" placeholder="Código mesero">
+                        <input type="text" name="cod_mes"  id="cod_mes" placeholder="Código mesero">
                         <br>
                         <label>Código de cocinero</label>
-                        <input type="text" name="cod_coc" class="txt_reg" id="cod_coc" placeholder="Código cocinero">
+                        <input type="text" name="cod_coc"  id="cod_coc" placeholder="Código cocinero">
                         <br>
                         <br>
                         <br>
