adicion del modulo acerca de

--- a/interfaces/index.html
+++ b/interfaces/index.html
@@ -11,7 +11,7 @@
         <button><a href="servicios.html">Servicios</a></button>
         <label>----aqui va el logo----</label>
         <button><a href="contacto.html">Contacto</a></button>
-        <button><a href="#">Acerca de</a></button>
+        <button><a href="acercade.html">Acerca de</a></button>
         <button><a href="pagina_login.html">Iniciar sesion</a></button>
     </div>
     </div>
