--- a/interfaces/servicios.html
+++ b/interfaces/servicios.html
@@ -17,7 +17,7 @@
             <button><a href="servicios.html">Servicios</a></button>
             <label>----aqui va el logo----</label>
             <button><a href="contacto.html">Contacto</a></button>
-            <button><a href="#">Acerca de</a></button>
+            <button><a href="acercade.html">Acerca de</a></button>
             <button><a href="pagina_login.html">Iniciar sesion</a></button>
         </div>
         
